documentation and dev container

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,7 +3,7 @@ FROM debian:bullseye
 RUN apt-get update && apt-get install -y \
     sudo \
     git \
-    build-essential cppcheck \
+    build-essential cppcheck cmake \
     libsdl2-dev libsdl2-ttf-dev libsdl2-mixer-dev \
     mesa-utils libgl1-mesa-glx
 
